<resources>
    <string name="app_name">ActiveVoIP</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="menu_home">Contacts</string>
    <string name="menu_gallery">Network</string>
    <string name="menu_slideshow">Settings</string>
    <string name="hostname">hostname:</string>
    <string name="port">port:</string>
    <string name="test">TEST</string>
    <string name="apply">APPLY</string>
    <string name="hostname_empty">Hostname is empty</string>
    <string name="port_outrange">Port should be 1~65535</string>
    <string name="dns_not_working">DNS not working</string>
    <string name="unknown_host">Unknown Host</string>
    <string name="server_no_response">Server no response</string>
    <string name="packet_loss_by_percent">Packet loss:%d%%</string>
    <string name="server_status_fine">Server status fine</string>
    <string name="system_network_failure">System network failure</string>
    <string name="from_contact">GENERATE FROM CONTACT NAME</string>
    <string name="apply_and_save"><![CDATA[APPLY&SAVE]]></string>
    <string name="uuid">UUID</string>
    <string name="copy">Copy</string>
    <string name="rollback_changes">Rollback Changes</string>
    <string name="random_generate">Random Generate</string>
    <string name="confirm">Confirm</string>
    <string name="contact_input_title">From Contact Name</string>
    <string name="contact_empty">Contact name is empty</string>
    <string name="copied">UUID copied to the clipboard</string>
    <string name="uuid_set">UUID set</string>
    <string name="host_set">Host set</string>
    <string name="wait_for_confirm">Wait for confirm</string>
    <string name="wait_for_response">Wait for response</string>
    <string name="from_contact_name">From Contact Name</string>
    <string name="from_uuid">From UUID</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="alias_input">Input contact alias</string>
    <string name="pair_failed">Pair failed</string>
    <string name="calling">Calling…</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="comfirm_delete">Confirm delete?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="dangerous">Dangerous!</string>
    <string name="mitm_warning_msg">Verify failure,high probability of encountering a man-in-the-middle attack!</string>
    <string name="panic">Panic!</string>
    <string name="remain_calm">Remain calm</string>
    <string name="incoming_call_with_format">Incoming call from %s(%s)with fingerprint %s</string>
    <string name="call_refused">Call refused by your contact</string>
    <string name="call_interrupted">The call was interrupted unexpectedly</string>
    <string name="talking">Talking…</string>
    <string name="missed_call">Missed Call</string>
</resources>